<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="android.fasa.edu.br.crudandroid.Principal">

    <Button
        android:id="@+id/btnCad"
        android:onClick="cadastrar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btnCad"
        android:background="@color/colorPrimary"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150" />

    <Button
        android:id="@+id/btnListar"
        android:onClick="listarTodos"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btnListar"
        android:background="@color/verde"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.270" />

    <Button
        android:id="@+id/btnUpdate"
        android:onClick="atualizar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btnUpdate"
        android:background="@color/pink"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.390" />

    <Button
        android:id="@+id/btnDeletar"
        android:onClick="apagar"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btnDeletar"
        android:background="@color/vermelho"
        android:textColor="@color/branco"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.510" />
        />

    <Button
        android:id="@+id/btnSair"
        android:onClick="sair"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:text="@string/btnSair"
        android:background="@color/branco"
        android:textColor="@color/vermelho"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.630" />
    />



</android.support.constraint.ConstraintLayout>
